# wseventsink

./: .gitignore  Makefile.am  README.md  configure.in  wseventsink.spec.in
lib/: Makefile.am  eventlistener.c  eventlistener.h  shttpd.c
server/: Makefile.am  eventsink.c
